# datetimeutil-shared-lib-conan

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  conanfile.py  docker-compose.yml  graph_info.json
scripts/: build.sh  dependencies-debian.sh  dependencies-osx.sh
src/: CMakeLists.txt  datetimeutil.cpp  datetimeutil.h
test_package/: conanfile.py
